deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gopherplate
spec:
  selector:
    app: gopherplate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
