deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gopherplate
  namespace: gopherplate
  labels:
    app.kubernetes.io/name: gopherplate
    app.kubernetes.io/managed-by: argocd
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: "<CERTIFICATE_ARN>"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]' # Ajustar para cada aplicação
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "eks-homologacao"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/tags: "Environment=homologacao,Service=eks,finops-env=homologacao,finops-service=eks,finops-workload=eks-apps,finops-cost-center=engenharia-de-software"

spec:
  ingressClassName: alb
  rules:
    - host: gopherplate.internal.appmax.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gopherplate
                port:
                  number: 80
